skill updated with skills

--- a/src/app/candidate-list/candidate-list.component.html
+++ b/src/app/candidate-list/candidate-list.component.html
@@ -13,7 +13,7 @@
                     <tr class="bg-primary">
                       <th><input type="checkbox" name="selectorder" (click)="onSelect($event)"></th>
                       <th>Name</th>
-                      <th>Skill</th>
+                      <th>Skills</th>
                     </tr>
                   </thead>
                   <tbody>
